src/objects/OAuthSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Used to store OAuth settings</description>
    <fields>
        <fullName>AuthEndpoint__c</fullName>
        <description>The OAuth endpoint.</description>
        <label>Auth Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Settings</label>
</CustomObject>